test/should_fail/list_op_1.erl
-module(list_op_1).

-spec fail([a]) -> {ok, [a]}.
fail(Xs) -> Xs -- Xs.
